[project]
name = "ha-memory"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Sendzik",email = "daniel@sendzik.eu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.13"
dependencies = [
    "fastmcp (>=2.12.2,<3.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "jinja2 (>=3.0.0,<4.0.0)",
    "python-multipart (>=0.0.6,<1.0.0)",
    "fastapi (>=0.104.0,<1.0.0)",
    "uvicorn (>=0.24.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
